# Monitor

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: windows-build.yml
Automation/: format.py
core/: CMakeLists.txt
core/include/models/: processes_model.h
core/include/system_info/: process_info.h  system_info.h
core/include/system_info/windows/: system_info_windows.h
core/include/workers/: controller.h  cpu_load_worker.h  memory_used_worker.h  processes_worker.h  worker_base.h
core/source/models/: processes_model.cpp
core/source/system_info/: system_info.cpp
core/source/system_info/windows/: system_info_windows.cpp
core/source/workers/: cpu_load_worker.cpp  memory_used_worker.cpp  processes_worker.cpp  worker_base.cpp
core/tests/: CMakeLists.txt  tst_mytest.cpp  tst_mytest2.cpp  tst_system_info.cpp
gui_monitor_desktop/: CMakeLists.txt  Main.qml  main.cpp  mainwindow.cpp  mainwindow.h
gui_monitor_desktop/Widgets/: cpu_widget.cpp  cpu_widget.h  memory_widget.cpp  memory_widget.h  process_view_wdget.cpp  process_view_wdget.h  system_info_widget.cpp  system_info_widget.h  system_info_widgets.cpp  system_info_widgets.h  widget_switcher.cpp  widget_switcher.h
gui_monitor_desktop/res/: resources.qrc
gui_monitor_mobile/: CMakeLists.txt  Main.qml  main.cpp
gui_monitor_mobile/qml/: ProcessScreen.qml
